[package]
name = "iced_profiling"
version = "0.1.0"
edition = "2021"
authors = ["Bingus <shankern@protonmail.com>"]

[features]
chrome = ["tracing-chrome"]
tracy = ["tracing-tracy"]

[dependencies.tracing]
version = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["registry"]

[dependencies.tracing-chrome]
version = "0.7.0"
optional = true

[dependencies.tracing-tracy]
version = "0.10.2"
optional = true